<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeliciousElectronsActivity" >

    <ImageView
        android:id="@+id/app_image"
        android:contentDescription="@string/image_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:src="@drawable/power_128"/>

    <ImageView
        android:id="@+id/title_image"
        android:contentDescription="@string/image_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/app_image"
        android:layout_marginBottom="30dp"
        android:src="@drawable/title"/>

    <EditText
        android:id="@+id/power_connected_msg_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/clear_image"
        android:layout_below="@id/app_image"
        android:layout_marginBottom="10dp"
        android:imeOptions="actionDone"
        android:hint="@string/enter_msg"
        android:maxLength="120"
        android:inputType="text|textNoSuggestions" />

    <ImageView
        android:id="@+id/clear_image"
        android:contentDescription="@string/image_desc"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/app_image"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/x"/>
    
    <Button
	    android:id="@+id/msg_save_button"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/power_connected_msg_edit"
	    android:text="@string/save_msg" />

    <Button
        android:id="@+id/test_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg_save_button"
        android:text="@string/test" />
    
    <Button
	    android:id="@+id/tutorial_button"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/test_button"
	    android:text="@string/tutorial" />

</RelativeLayout>
